# lastfmcollagegenerator-web

./: .env.dist  Dockerfile  README.rst  docker-compose.yml  pyproject.toml
src/: main.py
src/models/: collage.py
src/templates/home/: index.html
src/templates/shared/: footer.html  layout.html
src/templatetags/: tags.py
src/views/: collage.py  home.py
